@@ -121,3 +121,9 @@ install(TARGETS gcc_driver
         RUNTIME DESTINATION bin
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib)
+
+# FIXME: Linux specific. Create a symlink from mageec-gcc to mageec-gfortran
+install(CODE
+        "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink \
+                         ${CMAKE_INSTALL_PREFIX}/bin/mageec-gcc \
+                         ${CMAKE_INSTALL_PREFIX}/bin/mageec-gfortran)")
